Wrap rows in a container to ensure padding on mobile dev

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -66,7 +66,7 @@ $body-font-color: $black;
 $body-font-family: 'Open Sans','Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
-$global-padding: 1rem;
+$global-padding: 2rem;
 $global-weight-normal: normal;
 $global-weight-bold: bold;
 $global-radius: 0;
