--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,9 @@
  *= require foundation_and_overrides
 
  */
+
+@media screen and (max-width: 1000px) {
+  .container {
+    padding: 1em;
+  }
+}
